--- a/views/create.ejs
+++ b/views/create.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Create Book</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
     <h1>Create Book</h1>
