--- a/views/update.ejs
+++ b/views/update.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Update Book</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="public\css\style.css" type="text/css">
 </head>
 <body>
     <h1>Update Book</h1>
