--- a/public/views/books.ejs
+++ b/public/views/books.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Books</title>
-    <link rel="stylesheet" href="public\css\style.css" type="text/css">
+    <link rel="stylesheet" href="..\css\style.css" type="text/css">
 <body>
     <h1>Books</h1>
     <table>
